# Analyze_docker_logs_with_copilot

./: .coverage  .env.example  .gitignore  .history  CLAUDE.md  Dockerfile  FEATURES.md  MCP_SERVER.md  NEXT_STEPS.md  PATTERN_ANALYSIS.md  PLAN.md  PROJECT_RESTRUCTURING_SUMMARY.md  PROJECT_SUMMARY.md  README.md  container_patterns_test.json  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  test_analytics.py  test_mcp_tools.py  test_pattern_analyzer.py
.github/workflows/: tests.yml
doc/: WIKI_ARCHITECTURE.md  WIKI_ARROW_MIGRATION.md  WIKI_COPILOT_PROMPTS.md  WIKI_HOME.md  WIKI_OPERATIONS.md  WIKI_PROPOSAL_ROOT_CAUSE_ANALYZER.md  WIKI_QUALITY.md  WIKI_REVIEW_DEPENDENCY_MAPPER.md  WIKI_REVIEW_ROOT_CAUSE_ANALYZER.md  WIKI_TOOLS.md  WIKI_UPGRADE_PARQUET_CACHE.md
docker_log_analyzer/: __init__.py  cache_manager.py  config.py  correlator.py  dependency_mapper.py  docker.py  log_pattern_analyzer.py  mcp_server.py  patterns.py  root_cause_analyzer.py  secret_detector.py  spike_detector.py  tools.py
log_generator/: Dockerfile  generate_logs.py
src/: buffer_manager.py  config.py  error_consumer.py  llm_analyzer.py  log_pattern_analyzer.py  log_producer.py  logger.py  main.py
tests/: conftest.py  test_cache_manager.py  test_config_remote_docker.py  test_correlation_cache.py  test_correlator.py  test_dependency_mapper.py  test_docker.py  test_mcp_integration.py  test_pattern_detector.py  test_patterns.py  test_remote_docker_integration.py  test_root_cause_analyzer.py  test_secret_detector.py  test_spike_detector.py  test_tools_unit.py
vscode-extension/: QUICKSTART.md  README.md  package.json  tsconfig.json
vscode-extension/src/: extension.ts
