[project]
name = "docker-log-analyzer"
version = "0.2.0"
description = "Non-LLM Docker log pattern analysis MCP server for VSCode Copilot Agent Mode"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["docker", "logs", "monitoring", "mcp", "copilot", "analysis", "patterns"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-on-whales>=0.60.0",
    "python-dotenv>=1.0.1",
    "polars>=0.20.0",
    "mcp>=0.7.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
docker-log-analyzer-mcp = "docker_log_analyzer.mcp_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docker_log_analyzer"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "W"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: fast tests, no Docker required",
    "integration: requires Docker daemon running",
    "serial: tests that must run sequentially (not in parallel)",
]

[tool.pytest-xdist]
looptestpath = "tests"
